--- a/app/views/leaf_categories/_matrix_products.html.erb
+++ b/app/views/leaf_categories/_matrix_products.html.erb
@@ -1,14 +1,13 @@
 <div class="products_div"> 
 	
-	<!-- <p style="color:red; margin:10px;">DEBUGGING: in _complex_products.html.erb</p> -->
-	<!-- For each (complex) product in this leaf-level category, 
+	<!-- For each (matrix) product (or, in the code, 'base_product') in this leaf-level category, 
 			render a clickable partial that displays the product image and name.
-			If the user clicks on this partial, it should go to product_type/show. 
+			If the user clicks on this partial, it should go to base_product/show. 
 	--> 
 
-	<% @category.product_types.each do |p| %> 
+	<% @category.base_products.each do |p| %> 
 		<div class="product">
-			<a href='<%= product_type_path(p.id) %>'>
+			<a href='<%= base_product_path(p.id) %>'>
 				<%= image_tag("/images/products/all_small/" + p.image_filename + ".jpg", :size => "120x80",:style => "float:left; border:0;") %>
 				<div class="productName"><%= sanitize(p.name[0,37]) %></div>
 			</a>
