--- a/app/views/leaf_categories/_simple_products.html.erb
+++ b/app/views/leaf_categories/_simple_products.html.erb
@@ -1,6 +1,6 @@
 			<div class="products_div"> 
 				
-				<p style="color:red; margin:10px;">DEBUGGING: in _simple_products.html.erb</p>
+				<!-- <p style="color:red; margin:10px;">DEBUGGING: in _simple_products.html.erb</p> -->
 				<!-- For each (simple) product in this leaf-level category, 
 						render a clickable partial that displays the product image and name.
 						If the user clicks on this partial, it should go to product/show. 
@@ -8,7 +8,7 @@
 				<% @category.products.each do |p| %> <!-- or @products if it has been set up by the controller -->
 					<div class="product">
 						<a href='<%= product_path(p.id) %>'>
-							<%= image_tag("/images/products/all_small/" + p.image_filename[0,6] + "-000" + ".jpg", :size => "120x80",:style => "float:left; border:0;") %>
+							<%= image_tag("/images/products/all_small/" + p.image_filename + ".jpg", :size => "120x80",:style => "float:left; border:0;") %>
 							<div class="productName"><%= sanitize(p.name[0,37]) %></div>
 						</a>
 					</div>
