after attempt to merge in leftnav branch

--- a/app/views/base_products/show.html.erb
+++ b/app/views/base_products/show.html.erb
@@ -116,36 +116,19 @@
 			<%= render :partial => 'shared/menu' %>
 			<%= render :partial => 'shared/search' %>
 
-	    <!-- main content —————————————————————————————————————————————— -->
+	    <!-- main content ——————————————————————————————————————————————————————————————— -->
 
 			<div id="main_content">
 				
 				<!-- breadcrumb trail ———————————————————————————————————————————————————— -->
-				<div id="breadcrumb">
-					<!-- generate this: use acts_as_tree().reverse as in RailsCast 262 -->
-					<div style="float:left">
-						<b><%= link_to("Home Page",{ :controller => 'home',:action =>'index'} ) %></b><span>&nbsp;&nbsp;>&nbsp;&nbsp;</span>
-							<!-- <a href="/home/index">Home Page</a></b>&nbsp;&nbsp;&gt;&nbsp;&nbsp; -->
-					</div>
-					<div style="float:left">
-						<b><a href="#url"><%= @category.parent.parent.name %></a></b>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
-					</div>
-					<div style="float:left">
-						<b><a href="#url"><%= @category.parent.name %></a></b>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
-					</div>
-					<div style="float:left">
-						<b><a href="#url"><%= @category.name %></a></b>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
-					</div>
-					<div style="float:left">
-						<b><a href="#url"><%= sanitize(@base_product.name) %></a></b>
-					</div>
-				</div>
+				<%= render :partial => "/shared/breadcrumb" %>
 			
+				<!-- error messages —————————————————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
 					<div class="messages error"></div>
 				</div>
 
-	      <!-- base product ———————————————————————————————————————————————————————————— -->
+	      <!-- base product ———————————————————————————————————————————————————————— -->
 
 				<div id="product_image_description">
 					<!-- change to large picture --> 
