--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -95,40 +95,43 @@
 				<!-- MENU —————————————————————————————————————————————————————  -->
 				
 				<%= render :partial => 'shared/menu' %>
-
+				
+				<!-- popup overlays that contain 1st level of navigation for category tree ———————————————— -->
+				<!-- 
+				Where should they go on this page?  inside what div?  subcontainer or main_content?  
+				Try in main_content first. Does it matter?
+				-->
 					
 				<!-- MAIN CONTENT —————————————————————————————————————————————— -->
                 
 				<div id="main_content">
-                
+					
+           <!-- insert here the partial '/shared/menu_popups.html.erb' if that doesn't break things 
+	     			Note: /shared/menu_popups, not /shared_menu_popups_home.  
+								It is a smaller menu: only the top level categories (and search button).
+								It also uses the instance variable @top_category rather than @category.  
+								The home page can use @category because it does not use it elsewhere; the 
+								category pages cannot; using it within 
+						-->
+					<%= render(:partial => "/shared/menu_popups") %> 
 					
 					<!-- Error Messages ———————————————————————————————————————— -->
 					<div id="error-messages" style="display:none"></div>
-					
-					
-					
+				
 					<!-- remove the breadcrumb from intermediate category pages; leave in for testing 
 						(as a way of getting back to the home page)  until have left-nav working 
 						from pages other than the home page
 					-->
 					
 					<!-- Breadcrumb ———————————————————————————————————————————— -->
-					<div id="breadcrumb">
-						<!-- generate this: use acts_as_tree().reverse as in RailsCast 262 -->
-						<div style="float:left">
-							<b><%= link_to("Home Page",{ :controller => 'home',:action =>'index'} ) %></b><span>&nbsp;&nbsp;>&nbsp;&nbsp;</span>
-								<!-- <a href="/home/index">Home Page</a></b>&nbsp;&nbsp;&gt;&nbsp;&nbsp; -->
-						</div>
-						<div style="float:left">
-							<b><a href="#url"><%= @category.name %></a></b>
-						</div>
-					</div>
+					<%= render :partial => "/shared/breadcrumb" %>
 					
 					<!-- TABS: repeat subcategories within this category  ——————————————————————————————— -->
 					<!-- Show products for the subcategory that he selected on the home page
 						   Change to products for a different subcategory if he selects it here
 							 How does/should this work if there is another level of categories?
 							 Never is in Mavics?  Does occur in TruMedical?
+						-->
 							
 					<!-- Sibling Nav  ——————————————————————————————————————————————————————————————————— -->
                     
@@ -137,7 +140,7 @@
 						<!-- horizontal line of tabs/buttons: one per subcategory ————————————————————————— -->
 						<!-- problem: subcategory names are too long to allow all subcategories to fit in a single horizontal row as this design assumes; in Modalities there is room for 3 of 5 subcategories --> 
 						<div id="tabs_buttons_gamme">
-							<!-- stripped out; see show_sSiblinghNav.html.erb
+							<!-- stripped out; see show_siblinghNav.html.erb
 							-->
 							<!-- <div id="all_exercisers" onMouseOut="outTab(this)" onMouseOver="overTab(this)" class="tab active"> -->
 							<div class="tab active">
