--- a/app/views/categories/_subcategories_of_top_category.html.erb
+++ b/app/views/categories/_subcategories_of_top_category.html.erb
@@ -13,5 +13,8 @@
 		</div> <!-- end div.subcategory --> 
 		
 	<% end %>
+	
+	<!-- image to allow the user to close the popup manually --> 
+	<img class="close" src="/images/utility/Close16.png">
 
 </div><!-- end div.subcategories --> -
