--- a/app/views/categories/_leafCategories.html.erb
+++ b/app/views/categories/_leafCategories.html.erb
@@ -14,5 +14,8 @@
 					</div>
 					
 				<% end %>
+				
+				<!-- image to allow the user to close the popup manually --> 
+				<img class="close" src="/images/utility/Close16.png">
 
 			</div><!-- end div.leafCategories -->
