before send to PK

--- a/app/views/shared/_rightContent.html.erb
+++ b/app/views/shared/_rightContent.html.erb
@@ -1,7 +1,7 @@
 <div id="right_content">
 	<!-- top? -->
 	<style type="text/css">
-		table { margin-left:-4px;}
+		table { margin-left:-5px; margin-top: -5px;} /* move table to top left of div right_content; compensate for 5px cell spacing;  still ~3 px too low */ 
 		td.colorBlock {
 				width:115px; /* x2 = 230 + 4 cellspacing = 234px, the width of the left column nav (within its white background */ 
 				height:80px;
