--- a/app/views/layouts/application_pre_ssearch.html.erb
+++ b/app/views/layouts/application_pre_ssearch.html.erb
@@ -60,7 +60,7 @@
 		<%= javascript_include_tag "mavic.js" %> <!-- this includes jquery 1.4.2 and jquery-ui 1.8.x -->
 		
 		<style type="text/css">
-			div#contactUs, div#privacyPolicy, div#requestCatelog { display:none; padding-bottom:40px; padding-top:20px; margin-right:20px;}
+			div#contactUs, div#privacyPolicy, div#requestCatelog { display:none; padding-bottom:40px; padding-top:20px; }
 			div#contactUs h2, div#privacyPolicy h2, div#requestCatelog h2 { font-size:10px; font-weight:bold; margin-bottom: -10px; }
 			div#contactUs p, div#privacyPolicy p, div#requestCatelog p {font-size:10px; line-height:13px;}
 			div#privacyPolicy dl { margin-left:10px; font-size:9px; line-height:12px;}
@@ -73,34 +73,6 @@
 			div.leafCategories img.close {position:absolute; top:0px; right:-10px; opacity:0.5; }
 			div.popup_base img.close {position:absolute; top:10px; right:10px; opacity:0.5; }
 		
-		</style>
-		<!-- styles associated with competitor cross reference in footer bar -->
-		<style type="text/css">
-			div#metasearch { display:inline; margin-right:20px;}	
-			div#metasearch form { display:inline;}
-			div#metasearch form label { color:white; display:inline;}	
-			div#metasearch form input[type="text"] {
-				display:inline;
-				width:140px; 
-				color:white;
-				border:none!important;
-				border-radius: 2px;
-				-moz-border-radius: 2px;
-				-webkit-border-radius: 2px;
-				}
-			div#metasearch form input[type="submit"] {
-					display:inline;
-					font-size:10px!important;
-					background-color: white!important;
-					font-family: inherit;
-					color: black;
-					text-shadow: none!important; /* legal value? or just ignored? */
-					border:none!important;
-					border-radius: 2px;
-					-moz-border-radius: 2px;
-					-webkit-border-radius: 2px;
-					width:20px;
-				} 
 		</style>
 		
 		<script type="text/javascript">
@@ -340,7 +312,7 @@ google.load('search', '1');
 				<a href="www.tru-medical.com">www.tru-medical.com</a>
 			</p>
 			
-			<p>If you prefer to email in your question, feedback or anything else, you can use the form below and someone will get back to you within 24 hours or less.  We look forward to hearing from you!
+			<p>If you prefer to email in your question, feedback or anything else, you can use the form below and someone will get back to you witin 24 hours or less.  We look forward to hearing from you!
 			</p>
 			<p>[ INSERT FORM HERE ] </p>
 			<h2>Hours of Operation</h2>
@@ -458,24 +430,8 @@ google.load('search', '1');
 			<div class="left">
 				<a href="#requestCatelog">Request a Catalog</a> <!-- restyle; its not a clickable link -->
 				
-				
-				<!-- search by competitor part no ——————————————————————————————— -->
-		
-					<div id="metasearch" >
-						<!-- the following two lines prevent the metasearch code from getting an undefined model_name error.  Note that since the instance variable @product is not saved, it does not create an entry in the database; it only chews memory-->
-						<% @product = Product.find_by_id(params[:id]) %>
-					  <% @search = Product.search(params[:search]) %>
-						<%= form_for @search, :url => {:controller => "products", :action => "search"}, :html => {:method => :get} do |f| %>
-							<%= f.label :sammons_part_no_contains,"Competitor Cross Reference" %>
-							<%= f.text_field :sammons_part_no_contains %>
-							<%= f.submit("Go") %> 
-						<% end %>
-
-					</div>
-				
-				
 				<!-- <a href="#">Competitor Cross Reference:</a> -->
-				<!--
+				
 				<form id="nlsubmit" action="#" method="post" name="nlsubmit">
 					<a href="#">Competitor Cross Reference:</a>
 					<div class="whitebg">
@@ -483,7 +439,7 @@ google.load('search', '1');
 						<input class="submitnl" type="submit" name="submitnl" value="GO">
 					</div>
 				</form>		
-			 -->
+			 
 				<a href="#contactUs">Contact Us</a> 
 				<a href="#privacyPolicy">Privacy Policy</a> 
 				<!-- <a href="#">FAQs</a> -->
