--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -45,6 +45,12 @@
 		<script src="http://www.google.com/jsapi" type="text/javascript"></script>
 		<script type="text/javascript"> 
 		  google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST});
+			/* attempts to override the minimalist theme here don't work.
+			   How do I get it to use my local copy of the css file minimalist.css? 
+			$("div.gsc-clear-button").css("border","1px solid gray");
+			$("div.gsc-clear-button").css("padding","5px 4px 5px 4px");
+			$("div.gsc-clear-button").css("margin-left","2px");
+			*/
 		  google.setOnLoadCallback(function() {
 		    var customSearchControl = new google.search.CustomSearchControl(
 		      '000064363312609554513:jmpucuppl78');
