--- a/public/stylesheets/trumedical_base.css
+++ b/public/stylesheets/trumedical_base.css
@@ -36,7 +36,7 @@
 		
 #right_content_container,
 #home_right_content_container {
-	margin-top: 40px;
+	margin-top: 35px; /* to line up top of td within table within right_content_container with line under breadcrumb */
 	float: left;
 	}
 #home_right_content_container {
