white sammons search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
 			div#metasearch form input[type="text"] {
 				display:inline;
 				width:140px; 
-				color:white;
+				color:black;
 				border:none!important;
 				border-radius: 2px;
 				-moz-border-radius: 2px;
